Added selection highlighting.

--- a/html/main.html
+++ b/html/main.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Kiiboodoo</title>
+    <link rel="stylesheet" href="../css/index.css">
   </head>
   <body>
     <script src="../bin/app.js"></script>
