--- a/html/main.html
+++ b/html/main.html
@@ -1,7 +1,10 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kiiboodoo</title>
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../node_modules/bulma/css/bulma.css">
   </head>
   <body>
     <script src="../bin/app.js"></script>
