--- a/html/main.html
+++ b/html/main.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kiiboodoo</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <!-- <link rel="stylesheet" href="../css/index.css"> -->
     <link rel="stylesheet" href="../node_modules/bulma/css/bulma.css">
   </head>
   <body>
